zokrates_cli/examples/compile_errors/shadowing.zok
def foo() -> field {
    return 1;
}

def main() {
    field a = 2;
    field a = foo();
    return;
}
